--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/loto.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://smtpjs.com/v3/smtp.js"></script>;
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,10 +22,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <title>Tu Raíz psicología</title>
+    <meta
+    name="description"
+    content="Este espacio está enfocado y dedicado para ti. Recupera tu bienestar junto a nosotras y vuelve a quererte. Somos especialistas en psicología infanto-juvenil, parejas, familia y adultos."
+  />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <meta
+    name="description"
+    content="Este espacio está enfocado y dedicado para ti. Recupera tu bienestar junto a nosotras y vuelve a quererte. Somos especialistas en psicología infanto-juvenil, parejas, familia y adultos."
+  />
     <div id="root"></div>
     <!--
       This HTML file is a template.
